name:                yuntan-comment
version:             0.1.0.0
synopsis:            A micro server of comment for website
description:         Please see README.md
homepage:            http://github.com/Lupino/yuntan-comment#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           2018 Li Meng Jun
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Comment.Types
                     , Comment.DataSource.Table
                     , Comment.DataSource.Comment
                     , Comment.DataSource
                     , Comment.API
                     , Comment.Handler
                     , Comment.Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , unix-time
                     , mysql-simple
                     , text
                     , hashable
                     , resource-pool
                     , scotty
                     , haxl
                     , async
                     , bytestring

                     , time

                     , unordered-containers
                     , yuntan-common-scotty
                     , yuntan-common-scotty-type
                     , yuntan-common-order
                     , yuntan-common-list-result
                     , yuntan-common-config-mysql
                     , http-types
                     , mtl
  default-language:    Haskell2010

executable yuntan-comment
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-comment
                     , mtl
                     , scotty
                     , warp
                     , data-default-class
                     , streaming-commons
                     , wai-extra
                     , optparse-applicative
                     , haxl
                     , yaml
                     , yuntan-common-scotty-type
                     , yuntan-common-config-mysql
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-comment
